--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div id="Header">
         <header>
-            <img src="Daneel Nichol.jpeg" alt="Daneel Nichol">
+            <img src="Daneel_Nichol.jpeg" alt="Daneel Nichol">
             <h1> Daneel Nichol</h1>
             <p> The Statistics Student Tackling A Web Development Course</p>
         </header>
